syntax = "proto3";

package pb;
import "barber/service_categories.proto";

option go_package = "barbershop/src/pb/barber";

message GetServiceCategoriesRequest {
    string id = 1;
}

message GetServiceCategoriesResponse {
    ServiceCategories service_categories = 1;
}